--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     
     <body>
         <h1>The Factions Of Warhammer</h1>
-        <h4>Everything you need to know about the various factions of the tabletop miniatures game.</h4>
+        <h3>Everything you need to know about the various factions of the tabletop miniatures game.</h3>
+
+        <h2>The Setting</h2>
+        <p>It is the 41st millenium. The whole galaxy is torn in conflict. The Imperium of Man, a shattered and fascist planet-spanning empire, 
+            stands alone against the mutant, the heretic, and the alien. </p>
     </body>
 </html>
