--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
     </style>
     
     <body>
-        <h1>The Factions Of Warhammer</h1>
+        <h1>The Factions Of Warhammer 40k</h1>
         <h3>Everything you need to know about the various factions of the tabletop miniatures game.</h3>
 
         <h2>The Setting</h2>
-        <p>It is the 41st millenium. The whole galaxy is torn in conflict. The Imperium of Man, a shattered and fascist planet-spanning empire, 
-            stands alone against the mutant, the heretic, and the alien. </p>
+        <p>It is the 41st millenium. The whole galaxy is torn in conflict. The Imperium of Man, a shattered and fascist planet-spanning empire, stands alone against the mutant, the heretic, and the alien. New threats arise, and old dangers return. Humanity's Space Marines, genetically enhanced super-soldiers, fight against the forces of Chaos and the ever-growing tide of alien invasion. There is no peace. There is only war. </p>
     </body>
 </html>
