--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             background-color: rgb(0, 0, 0);
             color: rgb(255, 255, 255);
             font-family: monospace;
+            font-size: 20px;
         }
     </style>
     
@@ -18,5 +19,11 @@
 
         <h2>The Setting</h2>
         <p>It is the 41st millenium. The whole galaxy is torn in conflict. The Imperium of Man, a shattered and fascist planet-spanning empire, stands alone against the mutant, the heretic, and the alien. New threats arise, and old dangers return. Humanity's Space Marines, genetically enhanced super-soldiers, fight against the forces of Chaos and the ever-growing tide of alien invasion. There is no peace. There is only war. </p>
+
+        <h2>Learn more about the forces at war here:</h2>
+
+        <h3>The Imperium</h3>
+        <p>A shattered empire fighting for dominance, the Imperium has many armies to offer, from the noble Imperial Knights to the fiercely loyal Adepta Sororitas, to the famous Space Marines.</p>
+        <p><a href="Louis-Ignacio.github.io/imperium.html">Learn more</a></p>
     </body>
 </html>
