--- a/imperium.html
+++ b/imperium.html
@@ -7,9 +7,10 @@
     
     <style>
       body {
-      		background-color: rgb(0, 0, 0);
-					color: rgb(255, 255, 255)
-					font-family: monospace;
+      	      background-color: rgb(0, 0, 0);
+	      color: rgb(255, 255, 255)
+	      font-family: monospace;
+	      text-size: 20px;      
       }   
     </style>
     
