--- a/imperium.html
+++ b/imperium.html
@@ -2,19 +2,19 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Travel Brochure To Mars!</title>
+        <title>The Imperium</title>
     </head>
     
     <style>
       body {
-      	      background-color: rgb(0, 0, 0);
-	      color: rgb(255, 255, 255)
-	      font-family: monospace;
-	      text-size: 20px;      
+      		background-color: rgb(0, 0, 0);
+	    	color: rgb(255, 255, 255)
+	      	font-family: monospace;
+	      	text-size: 20px;      
       }   
     </style>
     
     <body>
-
+		<h1>The Imperium</h1>
     </body>
 </html>
