--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 
         <h3>The Imperium</h3>
         <p>A shattered empire fighting for dominance, the Imperium has many armies to offer, from the noble Imperial Knights to the fiercely loyal Adepta Sororitas, to the famous Space Marines.</p>
-        <p><a href="">Learn more</a></p>
+        <p><a href="https://louis-ignacio.github.io/the-imperium">Learn more</a></p>
     </body>
 </html>
