--- a/the-imperium.html
+++ b/the-imperium.html
@@ -8,15 +8,14 @@
     <style>
       	body {
       		background-color: rgb(0, 0, 0);
-	   	color: rgb(255, 255, 255)
+	   		color: rgb(255, 255, 255)
 	      	font-family: monospace;
 	      	text-size: 20px;      
       	}   
     </style>
     
     <body>
-	<h1>The Imperium</h1>
-	<p>not much to yet, so... <br>
-	BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH WAAAAAAAAAAAAAAAAAAAGH ORKY STUFF EXPLAINED SO IT MAD SUS LIKE DIS YUH DUDES MAWAYS *static*</p>
+		<h1>The Imperium</h1>
+		<p>not much to yet, so... <br> BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH BLAH WAAAAAAAAAAAAAAAAAAAGH ORKY STUFF EXPLAINED SO IT MAD SUS LIKE DIS YUH DUDES MAWAYS *static*</p>
     </body>
 </html>
