--- a/the-imperium.html
+++ b/the-imperium.html
@@ -8,7 +8,7 @@
     <style>
       	body {
       		background-color: rgb(0, 0, 0);
-	   		color: rgb(255, 255, 255)
+	   	color: rgb(255, 255, 255);
 	      	font-family: monospace;
 	      	text-size: 20px;      
       	}   
