--- a/the-imperium.html
+++ b/the-imperium.html
@@ -9,7 +9,7 @@
       		background-color: rgb(0, 0, 0);
 	   	color: rgb(255, 255, 255);
 	      	font-family: monospace;
-	      	text-size: 20px;      
+	      	font-size: 20px;      
       	}   
     </style>
     
