--- a/the-imperium.html
+++ b/the-imperium.html
@@ -16,7 +16,7 @@
     <body>
 		<h1>The Imperium</h1>
 		<p>The Imperium Of Man is an interstellar empire, in which most of mankind is united. It was founded 10,000 years ago by the godlike psyker, the Emperor Of Mankind. He continues to rule the Imperium, although after war with the Chaos forces, he was badly injured and kept alive in an arcane device known as the Golden Throne. His genetic son, the Primarch Roboute Guillman, now rules in his place.</p>
-	    	<p>The Imperium is the most powerful</p>
-	    	<p>The Imperium, however, is teetering on the brink of collapse. Various forces threaten to destroy the empire. To counter these enemies, many armies fight across the galaxy. The Emperor created a group of Super-Soldiers known as the Space Marines, who are organized into a thousand Chapters. Together, the Armies Of The Imperium fight to keep their Emperor alive, as thousands are slain every day in his name.</p>
+	    	<p>The Imperium is the most powerful empire in the Milky Way. With its base in Terra(another name for Earth), the empire spans many planetary systems, with almost trillions of inhabitants.</p>
+	    	<p>The Imperium, however, is teetering on the brink of collapse. Alien armies, returning kingdoms, and menacing Chaos daemons threaten to topple the empire and become the next superpower. To counter these enemies, many armies fight across the galaxy. The Emperor created a group of Super-Soldiers known as the Space Marines, who are organized into a thousand Chapters. Together, the Armies Of The Imperium fight to keep their Emperor alive, as thousands are slain every day in his name.</p>
     </body>
 </html>
